// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useFormik reset > should reset form values 1`] = `
{
  "address": {
    "city": "Los Angeles",
    "country": "USA",
  },
  "email": "jane@example.co",
  "name": "Jane Doe",
}
`;

exports[`useFormik reset > should reset form values with new values 1`] = `
{
  "address": {
    "city": "",
    "country": "",
  },
  "email": "jane@example.com",
  "name": "Jane Doe",
}
`;

exports[`useFormik reset > should reset form values with new values 2`] = `
{
  "address": {
    "city": "",
    "country": "",
  },
  "email": "alice@example.com",
  "name": "Alice Hansen",
}
`;
